--- a/Libraries/Cube.FileSystem.nuspec
+++ b/Libraries/Cube.FileSystem.nuspec
@@ -1,21 +1,34 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Cube.FileSystem.Net35</id>
-    <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
-    <copyright>$copyright$</copyright>
+    <id>Cube.FileSystem</id>
+    <version>1.8.1</version>
+    <title>Cube.FileSystem</title>
+    <authors>CubeSoft</authors>
+    <owners>CubeSoft</owners>
+    <copyright>Copyright (c) 2010 CubeSoft, Inc.</copyright>
     <description>I/O library for CubeSoft applications.</description>
-    <releaseNotes>Private release.</releaseNotes>
     <tags>Cube Windows</tags>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://github.com/cube-soft/Cube.FileSystem/blob/master/License.txt</licenseUrl>
     <projectUrl>https://github.com/cube-soft/Cube.FileSystem</projectUrl>
     <iconUrl>https://github.com/cube-soft/Cube.FileSystem/blob/master/Icon.png</iconUrl>
+    <dependencies>
+      <group targetFramework="net45">
+        <dependency id="AlphaFS" version="2.2.1" />
+        <dependency id="Cube.Core" version="1.8.1" />
+      </group>
+      <group targetFramework="net35">
+        <dependency id="AlphaFS" version="2.2.1" />
+        <dependency id="Cube.Core" version="1.8.1" />
+        <dependency id="Cube.Backwards" version="1.4.1" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
+    <file src="bin\Release\Cube.FileSystem.dll" target="lib\net45" />
+    <file src="bin\Release\Cube.FileSystem.xml" target="lib\net45" />
     <file src="bin\net35\Release\Cube.FileSystem.dll" target="lib\net35" />
+    <file src="bin\net35\Release\Cube.FileSystem.xml" target="lib\net35" />
   </files>
 </package>
