--- a/Tests/Cube.FileSystem.Tests.csproj
+++ b/Tests/Cube.FileSystem.Tests.csproj
@@ -73,8 +73,8 @@
     <DocumentationFile>bin\net35\x64\Release\Cube.FileSystem.Tests.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AsyncBridge.Net35">
-      <HintPath>..\..\packages\AsyncBridge.0.3.1\lib\net35-Client\AsyncBridge.Net35.dll</HintPath>
+    <Reference Include="AsyncBridge">
+      <HintPath>..\..\packages\AsyncBridge.0.3.1\lib\net35-client\AsyncBridge.dll</HintPath>
     </Reference>
     <Reference Include="Cube.Backwards">
       <HintPath>..\..\packages\Cube.Backwards.1.4.1\lib\net35\Cube.Backwards.dll</HintPath>
