--- a/Libraries/Cube.FileSystem.nuspec
+++ b/Libraries/Cube.FileSystem.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://github.com/cube-soft/Cube.FileSystem/blob/master/License.txt</licenseUrl>
     <projectUrl>https://github.com/cube-soft/Cube.FileSystem</projectUrl>
-    <iconUrl>https://github.com/cube-soft/Cube.FileSystem/blob/master/Icon.png</iconUrl>
+    <iconUrl>https://github.com/cube-soft/Cube.FileSystem/blob/master/Icon.png?raw=true</iconUrl>
     <dependencies>
       <group targetFramework="net45">
         <dependency id="AlphaFS" version="2.2.1" />
