--- a/Libraries/Cube.FileSystem.nuspec
+++ b/Libraries/Cube.FileSystem.nuspec
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package >
     <metadata>
-        <version>1.18.0</version>
+        <version>2.0.0</version>
         <id>Cube.FileSystem</id>
         <title>Cube.FileSystem</title>
         <authors>clown,cube-soft</authors>
         <owners>clown,cube-soft</owners>
-        <description>I/O library available for .NET Framework 3.5, 4.5, or later.</description>
+        <description>I/O library including path normalization.</description>
         <copyright>Copyright © 2010 CubeSoft, Inc.</copyright>
         <tags>Cube IO</tags>
         <icon>images\Icon.png</icon>
@@ -14,13 +14,23 @@
         <projectUrl>https://github.com/cube-soft/Cube.FileSystem</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <dependencies>
-            <dependency id="AlphaFS" version="2.2.6" />
-            <dependency id="Cube.Core" version="1.18.0" />
+            <group targetFramework="net45">
+                <dependency id="AlphaFS" version="2.2.6" />
+                <dependency id="Cube.Core" version="1.18.0" />
+            </group>
+            <group targetFramework="net35">
+                <dependency id="AlphaFS" version="2.2.6" />
+                <dependency id="Cube.Core" version="1.18.0" />
+            </group>
+            <group targetFramework="netstandard2.0">
+                <dependency id="Cube.Core" version="1.18.0" />
+            </group>
         </dependencies>
     </metadata>
     <files>
         <file src="..\Icon.png" target="images" />
         <file src="bin\Any CPU\Release\net45\Cube.FileSystem.*" target="lib\net45" />
         <file src="bin\Any CPU\Release\net35\Cube.FileSystem.*" target="lib\net35" />
+        <file src="bin\Any CPU\Release\netstandard2.0\Cube.FileSystem.*" target="lib\netstandard2.0" />
     </files>
 </package>
