--- a/Libraries/Cube.FileSystem.csproj
+++ b/Libraries/Cube.FileSystem.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.15.0</Version>
+        <Version>1.15.10</Version>
         <Authors>clown;cube-soft</Authors>
         <Company>CubeSoft</Company>
-        <Description>I/O library for CubeSoft libraries and applications.</Description>
+        <Description>I/O library including path normalization.</Description>
         <Copyright>Copyright © 2010 CubeSoft, Inc.</Copyright>
         <PackageTags>Cube;IO</PackageTags>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/cube-soft/$(AssemblyName)</PackageProjectUrl>
-        <PackageIconUrl>https://github.com/cube-soft/$(AssemblyName)/blob/master/Icon.png?raw=true</PackageIconUrl>
+        <PackageIcon>images\Icon.png</PackageIcon>
         <TargetFramework>net45</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Optimize>true</Optimize>
         <EnableDefaultNoneItems>false</EnableDefaultNoneItems>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <DefineConstants Condition=" '$(Configuration)' == 'Debug' ">DEBUG;TRACE</DefineConstants>
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>..\Cube.snk</AssemblyOriginatorKeyFile>
@@ -23,6 +24,9 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AlphaFS" Version="2.2.6" />
-        <PackageReference Include="Cube.Core" Version="1.15.0" />
+        <PackageReference Include="Cube.Core" Version="1.15.10" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Include="..\Icon.png" Pack="true" PackagePath="images" />
     </ItemGroup>
 </Project>
